<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/common_google_signin_btn_text_dark_default"
    android:backgroundTint="#fefefe"
    android:backgroundTintMode="multiply"

    >
    <TextView
        android:id="@+id/registerFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerFormTitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:textColor="#000000"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/txtFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtFirstName"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/registerFormTitle"
        android:layout_alignLeft="@+id/registerFormTitle"
        android:layout_alignStart="@+id/registerFormTitle" />
    <EditText
        android:id="@+id/txtInputFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtInputFirstName"
        android:width="240dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtFirstName"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName"
        android:layout_alignRight="@+id/registerFormTitle"
        android:layout_alignEnd="@+id/registerFormTitle" />

    <TextView
        android:id="@+id/txtLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtLastName"
        android:textSize="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtInputFirstName"
        android:layout_alignRight="@+id/txtFirstName"
        android:layout_alignEnd="@+id/txtFirstName"
        />
    <EditText
        android:id="@+id/txtInputLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/txtInputLastName"
        android:width="240dp"
        android:layout_marginTop="5dp"
        android:layout_alignRight="@+id/txtInputFirstName"
        android:layout_alignLeft="@+id/txtInputFirstName"
        android:layout_below="@+id/txtLastName"/>
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtEmail"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtInputLastName"
        android:layout_alignLeft="@+id/txtFirstName"
        android:layout_alignStart="@+id/txtFirstName" />
    <EditText
        android:id="@+id/txtInputEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:hint="@string/txtInputEmail"
        android:layout_below="@+id/txtEmail"
        android:layout_alignRight="@+id/txtInputFirstName"
        android:layout_alignLeft="@+id/txtInputLastName" />
    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtPassword"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/txtInputEmail"
        android:layout_alignRight="@+id/txtInputFirstName"
        android:layout_alignLeft="@+id/txtFirstName" />
    <EditText
        android:id="@+id/inputTxtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="240dp"
        android:layout_marginTop="5dp"
        android:hint="@string/inputTxtPass"
        android:layout_below="@+id/txtPass"
        android:layout_alignLeft="@+id/txtInputEmail"
        android:layout_alignRight="@+id/txtInputEmail"
        />
    <TextView
        android:id="@+id/txtConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtConfirmPass"
        android:layout_marginTop="5dp"
        android:textSize="20dp"
        android:textColor="#000000"
        android:layout_below="@+id/inputTxtPass"
        android:layout_alignRight="@+id/txtInputFirstName"
        android:layout_alignLeft="@+id/txtFirstName" />
    <EditText
        android:id="@+id/inputTxtConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:width="240dp"
        android:hint="@string/inputTxtPass"
        android:layout_below="@+id/txtConfirmPass"
        android:layout_alignLeft="@+id/txtInputEmail"
        android:layout_alignRight="@+id/txtInputEmail"
        />
    <Button
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDone"
        android:layout_marginTop="5dp"
        android:layout_alignLeft="@+id/inputTxtConfirmPass"
        android:layout_below="@+id/inputTxtConfirmPass"
        android:onClick="onDoneClick"

        />
</RelativeLayout>