<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.umenu.umenu.MainActivity"
    android:id="@+id/vbtg67">


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="90dp"
        android:textSize="15dp"

        android:layout_marginTop="11dp"
        android:text="@string/btnSignup"
        android:textAllCaps="false"
        android:onClick="onButtonClick"
        android:background="@drawable/shape"
        android:backgroundTintMode="screen"
        android:layout_below="@+id/btnLogin"
        android:layout_alignStart="@+id/btnLogin" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="90dp"
        android:textSize="15dp"
        android:text="@string/btnLogin"
        android:background="@drawable/shape"
        android:textAllCaps="false"
        android:onClick="onButtonClick"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/inputPassword" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="180dp"
        android:hint="@string/inputPassword"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtUserName"
        android:width="180dp"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:orientation="horizontal"
        android:layout_above="@+id/inputUserName"
        android:layout_alignStart="@+id/txtPassword" />

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="180dp"
        android:textSize="20dp"
        android:textColor="#ffffff"
        android:text="@string/txtPassword"
        android:layout_above="@+id/inputPassword"
        android:layout_alignStart="@+id/inputPassword" />

    <EditText android:id="@+id/inputUserName"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:width="180dp"
        android:hint="@string/inputUserName"
        android:layout_above="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/btnSignup"
        android:layout_marginBottom="13dp" />

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar4"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
