<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.umenu.umenu.Homepage"
    >

<TextView
    android:id="@+id/Welcome_message"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Welcome"
    android:contentDescription="@string/Welcome"
    android:textSize="40sp"
    android:textColor="#ffffff"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true" />

<Button
    android:id="@+id/btnMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/btnMenu"
    android:onClick="showPopup"
    android:textSize="25sp"
    android:contentDescription="@string/btnMenu"
    android:textAllCaps="false"
    android:layout_marginTop="133dp"
    android:height="30sp"
    android:background="@drawable/abc_list_selector_background_transition_holo_dark"
    android:layout_alignParentRight="true"
    android:layout_alignParentLeft="true"
    android:layout_below="@+id/Welcome_message" />



<ImageButton
    android:id="@+id/share"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/share"
    android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:src="@android:drawable/ic_menu_share" />

<ImageButton
    android:id="@+id/settings"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:contentDescription="@string/settings"
    android:src="@android:drawable/ic_menu_preferences"
    android:layout_alignParentBottom="true"
    android:layout_toRightOf="@+id/share" />

<SearchView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/searchView2"
    android:layout_below="@+id/Welcome_message"
    android:layout_alignParentLeft="true"
    android:layout_marginTop="73dp"
    android:layout_alignRight="@+id/btnMenu" />

    <ViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="200pt"
        android:layout_height="200pt"
        android:autoStart="true"
        android:flipInterval="4000"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/btnMenu"
        android:visibility="visible"
        android:touchscreenBlocksFocus="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demofive"
            android:adjustViewBounds="false" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demoone" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demotwo" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demothree"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/demofour" />



    </ViewFlipper>

    <com.facebook.login.widget.ProfilePictureView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id = "@id/profile_pic"

        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">


    </com.facebook.login.widget.ProfilePictureView>

    <TextView
        android:id="@+id/homepage_displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_below="@id/profile_pic"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="230sp"
        android:layout_height="35sp"
        app:srcCompat="@drawable/facebooksharebutton"
        android:id="@+id/fbimagebutton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/settings" />


</RelativeLayout>
